Fix Text contrast

--- a/styles/base.css
+++ b/styles/base.css
@@ -56,7 +56,7 @@ nav ul li a {
   text-decoration: none;
   padding: 20px;
   height: 100%;
-  font-weight: 300;
+  font-weight: 400;
   font-size: 20px;
 }
 
